src/miniaudio_bridge.h

MA_BRIDGE_EXPORT void ma_bridge_sound_set_volume(void* sound_handle, float volume);
MA_BRIDGE_EXPORT void ma_bridge_sound_set_pitch(void* sound_handle, float pitch);
MA_BRIDGE_EXPORT void ma_bridge_sound_set_pan(void* sound_handle, float pan);
MA_BRIDGE_EXPORT void ma_bridge_sound_set_looping(void* sound_handle, int32_t loop);
MA_BRIDGE_EXPORT void ma_bridge_sound_set_position(void* sound_handle, float x, float y, float z);
MA_BRIDGE_EXPORT void ma_bridge_sound_set_direction(void* sound_handle, float x, float y, float z);
MA_BRIDGE_EXPORT void ma_bridge_sound_set_velocity(void* sound_handle, float x, float y, float z);
MA_BRIDGE_EXPORT void ma_bridge_sound_set_cone(void* sound_handle, float innerAngle, float outerAngle, float outerGain);
MA_BRIDGE_EXPORT void ma_bridge_sound_set_doppler_factor(void* sound_handle, float factor);
// --- Listener API ---
MA_BRIDGE_EXPORT void ma_bridge_engine_listener_set_position(int32_t listenerIndex, float x, float y, float z);
MA_BRIDGE_EXPORT void ma_bridge_engine_listener_set_direction(int32_t listenerIndex, float x, float y, float z);
MA_BRIDGE_EXPORT void ma_bridge_engine_listener_set_velocity(int32_t listenerIndex, float x, float y, float z);
MA_BRIDGE_EXPORT void ma_bridge_engine_listener_set_world_up(int32_t listenerIndex, float x, float y, float z);
MA_BRIDGE_EXPORT void ma_bridge_engine_listener_set_cone(int32_t listenerIndex, float innerAngle, float outerAngle, float outerGain);
MA_BRIDGE_EXPORT void ma_bridge_engine_listener_set_enabled(int32_t listenerIndex, int32_t enabled);
MA_BRIDGE_EXPORT void ma_bridge_sound_set_fade_in_pcm_frames(void* sound_handle, float volumeBeg, float volumeEnd, uint64_t len);
MA_BRIDGE_EXPORT void ma_bridge_sound_set_fade_start_time(void* sound_handle, float volumeBeg, float volumeEnd, uint64_t len, uint64_t absoluteGlobalTime);
MA_BRIDGE_EXPORT void ma_bridge_sound_seek_to_pcm_frame(void* sound_handle, uint64_t frameIndex);
MA_BRIDGE_EXPORT uint64_t ma_bridge_sound_get_length_in_pcm_frames(void* sound_handle);
MA_BRIDGE_EXPORT uint64_t ma_bridge_sound_get_cursor_in_pcm_frames(void* sound_handle); // Current position
MA_BRIDGE_EXPORT int32_t ma_bridge_sound_is_playing(void* sound_handle);