lib/miniaudio_ffi_bindings_generated.dart


  late final _ma_bridge_sound_set_volumePtr = _lookup<
          ffi
          .NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Float)>>(
      'ma_bridge_sound_set_volume');
  late final _ma_bridge_sound_set_volume = _ma_bridge_sound_set_volumePtr
      .asFunction<void Function(ffi.Pointer<ffi.Void>, double)>();

  void ma_bridge_sound_set_pitch(
    ffi.Pointer<ffi.Void> sound_handle,
    double pitch,
  ) {
    return _ma_bridge_sound_set_pitch(
      sound_handle,
      pitch,
    );
  }

  late final _ma_bridge_sound_set_pitchPtr = _lookup<
          ffi
          .NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Float)>>(
      'ma_bridge_sound_set_pitch');
  late final _ma_bridge_sound_set_pitch = _ma_bridge_sound_set_pitchPtr
      .asFunction<void Function(ffi.Pointer<ffi.Void>, double)>();

  void ma_bridge_sound_set_pan(
    ffi.Pointer<ffi.Void> sound_handle,
    double pan,
  ) {
    return _ma_bridge_sound_set_pan(
      sound_handle,
      pan,
    );
  }

  late final _ma_bridge_sound_set_panPtr = _lookup<
          ffi
          .NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Float)>>(
      'ma_bridge_sound_set_pan');
  late final _ma_bridge_sound_set_pan = _ma_bridge_sound_set_panPtr
      .asFunction<void Function(ffi.Pointer<ffi.Void>, double)>();

  void ma_bridge_sound_set_looping(
    ffi.Pointer<ffi.Void> sound_handle,
    int loop,
  ) {
    return _ma_bridge_sound_set_looping(
      sound_handle,
      loop,
    );
  }

  late final _ma_bridge_sound_set_loopingPtr = _lookup<
          ffi
          .NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Int32)>>(
      'ma_bridge_sound_set_looping');
  late final _ma_bridge_sound_set_looping = _ma_bridge_sound_set_loopingPtr
      .asFunction<void Function(ffi.Pointer<ffi.Void>, int)>();

  void ma_bridge_sound_set_position(
    ffi.Pointer<ffi.Void> sound_handle,
    double x,
    double y,
    double z,
  ) {
    return _ma_bridge_sound_set_position(
      sound_handle,
      x,
      y,
      z,
    );
  }

  late final _ma_bridge_sound_set_positionPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Float, ffi.Float,
              ffi.Float)>>('ma_bridge_sound_set_position');
  late final _ma_bridge_sound_set_position =
      _ma_bridge_sound_set_positionPtr.asFunction<
          void Function(ffi.Pointer<ffi.Void>, double, double, double)>();

  void ma_bridge_sound_set_direction(
    ffi.Pointer<ffi.Void> sound_handle,
    double x,
    double y,
    double z,
  ) {
    return _ma_bridge_sound_set_direction(
      sound_handle,
      x,
      y,
      z,
    );
  }

  late final _ma_bridge_sound_set_directionPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Float, ffi.Float,
              ffi.Float)>>('ma_bridge_sound_set_direction');
  late final _ma_bridge_sound_set_direction =
      _ma_bridge_sound_set_directionPtr.asFunction<
          void Function(ffi.Pointer<ffi.Void>, double, double, double)>();

  void ma_bridge_sound_set_velocity(
    ffi.Pointer<ffi.Void> sound_handle,
    double x,
    double y,
    double z,
  ) {
    return _ma_bridge_sound_set_velocity(
      sound_handle,
      x,
      y,
      z,
    );
  }

  late final _ma_bridge_sound_set_velocityPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Float, ffi.Float,
              ffi.Float)>>('ma_bridge_sound_set_velocity');
  late final _ma_bridge_sound_set_velocity =
      _ma_bridge_sound_set_velocityPtr.asFunction<
          void Function(ffi.Pointer<ffi.Void>, double, double, double)>();

  void ma_bridge_sound_set_cone(
    ffi.Pointer<ffi.Void> sound_handle,
    double innerAngle,
    double outerAngle,
    double outerGain,
  ) {
    return _ma_bridge_sound_set_cone(
      sound_handle,
      innerAngle,
      outerAngle,
      outerGain,
    );
  }

  late final _ma_bridge_sound_set_conePtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Float, ffi.Float,
              ffi.Float)>>('ma_bridge_sound_set_cone');
  late final _ma_bridge_sound_set_cone =
      _ma_bridge_sound_set_conePtr.asFunction<
          void Function(ffi.Pointer<ffi.Void>, double, double, double)>();

  void ma_bridge_sound_set_doppler_factor(
    ffi.Pointer<ffi.Void> sound_handle,
    double factor,
  ) {
    return _ma_bridge_sound_set_doppler_factor(
      sound_handle,
      factor,
    );
  }

  late final _ma_bridge_sound_set_doppler_factorPtr = _lookup<
          ffi
          .NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Float)>>(
      'ma_bridge_sound_set_doppler_factor');
  late final _ma_bridge_sound_set_doppler_factor =
      _ma_bridge_sound_set_doppler_factorPtr
          .asFunction<void Function(ffi.Pointer<ffi.Void>, double)>();

  /// --- Listener API ---
  void ma_bridge_engine_listener_set_position(
    int listenerIndex,
    double x,
    double y,
    double z,
  ) {
    return _ma_bridge_engine_listener_set_position(
      listenerIndex,
      x,
      y,
      z,
    );
  }

  late final _ma_bridge_engine_listener_set_positionPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Int32, ffi.Float, ffi.Float,
              ffi.Float)>>('ma_bridge_engine_listener_set_position');
  late final _ma_bridge_engine_listener_set_position =
      _ma_bridge_engine_listener_set_positionPtr
          .asFunction<void Function(int, double, double, double)>();

  void ma_bridge_engine_listener_set_direction(
    int listenerIndex,
    double x,
    double y,
    double z,
  ) {
    return _ma_bridge_engine_listener_set_direction(
      listenerIndex,
      x,
      y,
      z,
    );
  }

  late final _ma_bridge_engine_listener_set_directionPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Int32, ffi.Float, ffi.Float,
              ffi.Float)>>('ma_bridge_engine_listener_set_direction');
  late final _ma_bridge_engine_listener_set_direction =
      _ma_bridge_engine_listener_set_directionPtr
          .asFunction<void Function(int, double, double, double)>();

  void ma_bridge_engine_listener_set_velocity(
    int listenerIndex,
    double x,
    double y,
    double z,
  ) {
    return _ma_bridge_engine_listener_set_velocity(
      listenerIndex,
      x,
      y,
      z,
    );
  }

  late final _ma_bridge_engine_listener_set_velocityPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Int32, ffi.Float, ffi.Float,
              ffi.Float)>>('ma_bridge_engine_listener_set_velocity');
  late final _ma_bridge_engine_listener_set_velocity =
      _ma_bridge_engine_listener_set_velocityPtr
          .asFunction<void Function(int, double, double, double)>();

  void ma_bridge_engine_listener_set_world_up(
    int listenerIndex,
    double x,
    double y,
    double z,
  ) {
    return _ma_bridge_engine_listener_set_world_up(
      listenerIndex,
      x,
      y,
      z,
    );
  }

  late final _ma_bridge_engine_listener_set_world_upPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Int32, ffi.Float, ffi.Float,
              ffi.Float)>>('ma_bridge_engine_listener_set_world_up');
  late final _ma_bridge_engine_listener_set_world_up =
      _ma_bridge_engine_listener_set_world_upPtr
          .asFunction<void Function(int, double, double, double)>();

  void ma_bridge_engine_listener_set_cone(
    int listenerIndex,
    double innerAngle,
    double outerAngle,
    double outerGain,
  ) {
    return _ma_bridge_engine_listener_set_cone(
      listenerIndex,
      innerAngle,
      outerAngle,
      outerGain,
    );
  }

  late final _ma_bridge_engine_listener_set_conePtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Int32, ffi.Float, ffi.Float,
              ffi.Float)>>('ma_bridge_engine_listener_set_cone');
  late final _ma_bridge_engine_listener_set_cone =
      _ma_bridge_engine_listener_set_conePtr
          .asFunction<void Function(int, double, double, double)>();

  void ma_bridge_engine_listener_set_enabled(
    int listenerIndex,
    int enabled,
  ) {
    return _ma_bridge_engine_listener_set_enabled(
      listenerIndex,
      enabled,
    );
  }

  late final _ma_bridge_engine_listener_set_enabledPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int32, ffi.Int32)>>(
          'ma_bridge_engine_listener_set_enabled');
  late final _ma_bridge_engine_listener_set_enabled =
      _ma_bridge_engine_listener_set_enabledPtr
          .asFunction<void Function(int, int)>();

  void ma_bridge_sound_set_fade_in_pcm_frames(
    ffi.Pointer<ffi.Void> sound_handle,
    double volumeBeg,
    double volumeEnd,
    int len,
  ) {
    return _ma_bridge_sound_set_fade_in_pcm_frames(
      sound_handle,
      volumeBeg,
      volumeEnd,
      len,
    );
  }

  late final _ma_bridge_sound_set_fade_in_pcm_framesPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Float, ffi.Float,
              ffi.Uint64)>>('ma_bridge_sound_set_fade_in_pcm_frames');
  late final _ma_bridge_sound_set_fade_in_pcm_frames =
      _ma_bridge_sound_set_fade_in_pcm_framesPtr.asFunction<
          void Function(ffi.Pointer<ffi.Void>, double, double, int)>();

  void ma_bridge_sound_set_fade_start_time(
    ffi.Pointer<ffi.Void> sound_handle,
    double volumeBeg,
    double volumeEnd,
    int len,
    int absoluteGlobalTime,
  ) {
    return _ma_bridge_sound_set_fade_start_time(
      sound_handle,
      volumeBeg,
      volumeEnd,
      len,
      absoluteGlobalTime,
    );
  }

  late final _ma_bridge_sound_set_fade_start_timePtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Float, ffi.Float,
              ffi.Uint64, ffi.Uint64)>>('ma_bridge_sound_set_fade_start_time');
  late final _ma_bridge_sound_set_fade_start_time =
      _ma_bridge_sound_set_fade_start_timePtr.asFunction<
          void Function(ffi.Pointer<ffi.Void>, double, double, int, int)>();

  void ma_bridge_sound_seek_to_pcm_frame(
    ffi.Pointer<ffi.Void> sound_handle,
    int frameIndex,
  ) {
    return _ma_bridge_sound_seek_to_pcm_frame(
      sound_handle,
      frameIndex,
    );
  }

  late final _ma_bridge_sound_seek_to_pcm_framePtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Void>,
              ffi.Uint64)>>('ma_bridge_sound_seek_to_pcm_frame');
  late final _ma_bridge_sound_seek_to_pcm_frame =
      _ma_bridge_sound_seek_to_pcm_framePtr
          .asFunction<void Function(ffi.Pointer<ffi.Void>, int)>();

  int ma_bridge_sound_get_length_in_pcm_frames(
    ffi.Pointer<ffi.Void> sound_handle,
  ) {
    return _ma_bridge_sound_get_length_in_pcm_frames(
      sound_handle,
    );
  }

  late final _ma_bridge_sound_get_length_in_pcm_framesPtr =
      _lookup<ffi.NativeFunction<ffi.Uint64 Function(ffi.Pointer<ffi.Void>)>>(
          'ma_bridge_sound_get_length_in_pcm_frames');
  late final _ma_bridge_sound_get_length_in_pcm_frames =
      _ma_bridge_sound_get_length_in_pcm_framesPtr
          .asFunction<int Function(ffi.Pointer<ffi.Void>)>();

  int ma_bridge_sound_get_cursor_in_pcm_frames(
    ffi.Pointer<ffi.Void> sound_handle,
  ) {
    return _ma_bridge_sound_get_cursor_in_pcm_frames(
      sound_handle,
    );
  }

  late final _ma_bridge_sound_get_cursor_in_pcm_framesPtr =
      _lookup<ffi.NativeFunction<ffi.Uint64 Function(ffi.Pointer<ffi.Void>)>>(
          'ma_bridge_sound_get_cursor_in_pcm_frames');
  late final _ma_bridge_sound_get_cursor_in_pcm_frames =
      _ma_bridge_sound_get_cursor_in_pcm_framesPtr
          .asFunction<int Function(ffi.Pointer<ffi.Void>)>();

  int ma_bridge_sound_is_playing(
    ffi.Pointer<ffi.Void> sound_handle,
  ) {
    return _ma_bridge_sound_is_playing(
      sound_handle,
    );
  }
